# llm-openrouter

./: README.md  llm_openrouter.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: conftest.py  models_persister.py  test_llm_openrouter.py
tests/cassettes/test_llm_openrouter/: test_image_prompt.yaml  test_llm_models.yaml  test_prompt.yaml  test_tool_calls.yaml
