[project]
name = "llm-openrouter"
version = "0.4.1"
description = "LLM plugin for models hosted by OpenRouter"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm>=0.27.1",
    "httpx",
    "openai>=1.57.0",
]

[project.urls]
Homepage = "https://github.com/simonw/llm-openrouter"
Changelog = "https://github.com/simonw/llm-openrouter/releases"
Issues = "https://github.com/simonw/llm-openrouter/issues"
CI = "https://github.com/simonw/llm-openrouter/actions"

[project.entry-points.llm]
openrouter = "llm_openrouter"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "inline-snapshot"]
