[project]
name = "llm-openrouter"
version = "0.6"
description = "LLM plugin for models hosted by OpenRouter"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "llm>=0.27.1",
    "httpx",
    "openai>=1.57.0",
]

[project.urls]
Homepage = "https://github.com/simonw/llm-openrouter"
Changelog = "https://github.com/simonw/llm-openrouter/releases"
Issues = "https://github.com/simonw/llm-openrouter/issues"
CI = "https://github.com/simonw/llm-openrouter/actions"

[project.entry-points.llm]
openrouter = "llm_openrouter"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest", "pytest-recording", "inline-snapshot"]
